<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/buy_life"
            style="@style/ShopCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <LinearLayout
                style="@style/ShopLinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView

                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/baseline_favorite_24" />

                <TextView
                    style="@style/ShopTextViewStyle"
                    android:text="@string/shop_fragment_buy_life_text" />

                <Button
                    android:id="@+id/b_buy_life"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_fragment_button_buy"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/app_accent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_buy_life_gold"
            style="@style/SpecialCardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <LinearLayout
                style="@style/ShopLinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView

                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/baseline_favorite_24_gold"
                    app:tint="@color/app_gold" />

                <TextView
                    style="@style/ShopTextViewStyle"
                    android:text="@string/shop_fragment_buy_life_gold_text" />

                <Button
                    android:id="@+id/b_buy_life_gold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_fragment_button_buy"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/app_accent" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_place_for_quiz"
            style="@style/ShopCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <LinearLayout
                style="@style/ShopLinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/ShopImageViewStyle"
                    android:src="@drawable/ic_baseline_add_circle_24" />

                <TextView
                    style="@style/ShopTextViewStyle"
                    android:text="@string/shop_fragment_buy_one_place_text" />

                <Button
                    android:id="@+id/b_place_for_quiz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_fragment_button_buy"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/app_accent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_donate"
            style="@style/ShopCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <LinearLayout
                style="@style/ShopLinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/ShopImageViewStyle"
                    android:src="@drawable/ic_donate" />

                <TextView
                    style="@style/ShopTextViewStyle"
                    android:text="@string/shop_fragment_text_donate" />

                <Button
                    android:id="@+id/b_donate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_fragment_donate"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/app_accent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_referrals"
            style="@style/ShopCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <LinearLayout
                style="@style/ShopLinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/ShopImageViewStyle"
                    android:src="@drawable/ic_baseline_people_24" />

                <TextView
                    style="@style/ShopTextViewStyle"
                    android:text="@string/shop_fragment_referrals_title" />

                <Button
                    android:id="@+id/b_referrals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_fragment_referrals_button_open"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/app_accent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/adCard"
            style="@style/ShopCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <LinearLayout
                style="@style/ShopLinearLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                    android:src="@drawable/ic_box" />

                <TextView
                    style="@style/ShopTextViewStyle"
                    android:text="@string/shop_fragment_get_box_for_ad_text" />

                <Button
                    android:id="@+id/btnBuyAd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_fragment_get_box_for_ad_show"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/app_accent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
